[gd_scene load_steps=3 format=3 uid="uid://cj0wechyf4nf1"]

[ext_resource type="Script" uid="uid://bhhjyeuhqxweu" path="res://Scripts/poison_cloud.gd" id="1_4xjjg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qf06y"]

[node name="PoisonCloud" type="Area2D"]
script = ExtResource("1_4xjjg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qf06y")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
